Fixed tex macro file

--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -1,4 +1,4 @@
-\ProvidePackage{mypackage}[4/4/2018 LaTeX package for myself]
+\ProvidesPackage{mypackage}[4/4/2018 LaTeX package for myself]
 \RequirePackage{amsfonts}
 \RequirePackage{amssymb}
 
