Added new operators

--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -29,6 +29,9 @@
 \DeclareMathOperator{\Id}{Id}
 \DeclareMathOperator{\Inv}{Inv}
 \DeclareMathOperator{\GCD}{GCD}
+\DeclareMathOperator{\LCM}{LCM}
+\DeclareMathOperator{\Det}{Det}
+\DeclareMathOperator{\sgn}{sgn}
 
 % 2x2 matrix
 \newcommand{\Matrix}[4]{\left(\begin{array}{cc}  #1 & #2 \\  #3 & #4 \\
