Add quaternion space command

--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -9,6 +9,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\C}{\mathbb{C}}
+\newcommand{\H}{\mathbb{H}}
 
 % Sets
 \let\originalemptyset\emptyset
