Added quaternion space command

--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -9,8 +9,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\C}{\mathbb{C}}
-\newcommand{\H}{\mathbb{H}}
-
+\newcommand{\HH}{\mathbb{H}}
 % Sets
 \let\originalemptyset\emptyset
 \renewcommand{\emptyset}{\varnothing}
