--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -10,6 +10,8 @@
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\HH}{\mathbb{H}}
+\newcommand{\F}{\mathbb{F}}
+
 % Sets
 \let\originalemptyset\emptyset
 \renewcommand{\emptyset}{\varnothing}
@@ -33,7 +35,10 @@
 \DeclareMathOperator{\Det}{Det}
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\Aut}{Aut}
-\DeclareMathOperator{\deg}{deg}
+\DeclareMathOperator{\Ord}{Ord}
+\DeclareMathOperator{\SO}{SO}
+\DeclareMathOperator{\Symm}{Symm}
+\DeclareMathOperator{\Orb}{Orb}
 
 % 2x2 matrix
 \newcommand{\Matrix}[4]{\left(\begin{array}{cc}  #1 & #2 \\  #3 & #4 \\
