--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -40,6 +40,9 @@
 \DeclareMathOperator{\Symm}{Symm}
 \DeclareMathOperator{\Orb}{Orb}
 
+% Commands
+\newcommand{\tang}{\top}
+
 % 2x2 matrix
 \newcommand{\Matrix}[4]{\left(\begin{array}{cc}  #1 & #2 \\  #3 & #4 \\
 \end{array} \right) }
