Add long arrow shortcuts

--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -42,6 +42,8 @@
 
 % Commands
 \newcommand{\tang}{\top}
+\newcommand{\lrr}{\longrightarrow}
+\newcommand{\llr}{\longleftarrow}
 
 % 2x2 matrix
 \newcommand{\Matrix}[4]{\left(\begin{array}{cc}  #1 & #2 \\  #3 & #4 \\
