Add Char operator

--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -38,6 +38,7 @@
 \DeclareMathOperator{\SO}{SO}
 \DeclareMathOperator{\Symm}{Symm}
 \DeclareMathOperator{\Orb}{Orb}
+\DeclareMathOperator{\Char}{Char}
 
 % Commands
 \newcommand{\tang}{\top}
